Fix z-index of notification bar overlapping mobile hamburger menu when opened

--- a/wp-content/themes/meltingpot-child/style.css
+++ b/wp-content/themes/meltingpot-child/style.css
@@ -1256,6 +1256,9 @@ body.modal-open .transparent-modal {
 	  border: 2px solid #83cdcf;
   }
 
+  .easy-notification-bar {
+	z-index: 12 !important;
+  }
   @media screen and (max-width: 1024px) {
 	.easy-notification-bar {
 		position: fixed !important;
